Fix search icon on mobile.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -447,66 +447,49 @@ input[type='text']:focus {
       cursor: pointer;
     }
   
-    .search-icon {
-      display: none;
-      height: 25px;
-      width: 25px;
-      margin: -5px 0 0 5px;
-      &:hover {
-        cursor: pointer;
-      }
-    }
   }
 }
 
 @media screen and (max-width: $break-small){
   .navbar {
-  .navbar-inner,
-  .navbar-inverse {
-    //position: fixed;
-    width: 100%;
-    height: 60px;
-    text-align: center;
-
-    .login {
-      display: none;
-    }
-
-    form {
-      width: 100%
-    }
-
-    .brand {
+    .navbar-inner,
+    .navbar-inverse {
+      //position: fixed;
       width: 100%;
-      margin-left: -16px;
-      margin-bottom: 10px;
-      margin-right: 0;
-      padding-right: 0;
-    }
+      height: 60px;
+      text-align: center;
 
-    .logo-text {
-      //display: none;
-    }
-
-    .find-spot {
-      input {
-        width: 130px;
-        margin-left: 2px;
+      .login {
+        display: none;
       }
-      select {
-        width: 75px;
-        margin-left: 0px;
+
+      form {
+        width: 100%
+      }
+
+      .brand {
+        width: 100%;
+        margin-left: -16px;
+        margin-bottom: 10px;
+        margin-right: 0;
+        padding-right: 0;
+      }
+
+      .logo-text {
+        //display: none;
+      }
+
+      .find-spot {
+        input {
+          width: 130px;
+          margin-left: 2px;
+        }
+        select {
+          width: 75px;
+          margin-left: 0px;
+        }
       }
     }
-
-    .search-icon {
-      display: inline-block;
-    }
-
-    .search-btn {
-      display: none;
-    }
-  }
   }
 }
 
@@ -529,20 +512,20 @@ input[type='text']:focus {
     .btn {
       margin-top: -10px;
     }
+
+    .search-icon {
+      display: none;
+      height: 25px;
+      width: 25px;
+      margin: -5px 0 0 5px;
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   .signout:hover {
     cursor: pointer;
-  }
-
-  .search-icon {
-    display: none;
-    height: 25px;
-    width: 25px;
-    margin: -5px 0 0 5px;
-    &:hover {
-      cursor: pointer;
-    }
   }
 
   .addthis_toolbox {
@@ -555,34 +538,44 @@ input[type='text']:focus {
 
 @media screen and (max-width: $break-small){
   .header {
-    width: 100%
-  }
+    width: 100%;
 
-  .addthis_toolbox {
-    display: none;
-  }
-
-  form {
-    width: 100%
-  }
-
-  .find-spot {
-    input {
-      width: 130px;
-      margin-left: 2px;
+    .addthis_toolbox {
+      display: none;
     }
-    select {
-      width: 75px;
-      margin-left: 0px;
+
+    form {
+      width: 100%;
     }
-  }
 
-  .search-icon {
-    display: inline-block;
-  }
+    .find-spot {
+      input {
+        width: 130px;
+        margin-left: 2px;
+      }
+      select {
+        width: 75px;
+        margin-left: 0px;
+      }
 
-  .search-btn {
-    display: none;
+      .search-icon {
+        background-color: #DDDDDD;
+        border: 1px solid #CCCCCC;
+        border-radius: 5px 5px 5px 5px;
+        display: inline-block;
+        height: 28px;
+        margin-top: -10px;
+        width: 28px;
+
+        &:hover {
+          background-color: #ccc;
+        }
+      }
+
+      .search-btn {
+        display: none;
+      }
+    }
   }
 }
 /******************
